fix: remove horizontal scroll

--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -1,6 +1,8 @@
-.layoutBackground {
+.layoutContainer {
   min-height: 100vh;
-  width: 100vw;
+}
+
+.layoutBackground {
   display: flex;
 }
 
